src/c/src/ros2binds.h

#pragma once

#ifdef __cplusplus
extern "C" {
#endif

void rclcpp_init(int argc, char const *const argv[]);
int rclcpp_shutdown();

#ifdef __cplusplus
}
#endif