src/discovery_server_impl.rs

/* automatically generated by rust-bindgen 0.59.1 */

pub const _STDINT_H: u32 = 1;
pub const _FEATURES_H: u32 = 1;
pub const _DEFAULT_SOURCE: u32 = 1;
pub const __GLIBC_USE_ISOC2X: u32 = 0;
pub const __USE_ISOC11: u32 = 1;
pub const __USE_ISOC99: u32 = 1;
pub const __USE_ISOC95: u32 = 1;
pub const __USE_POSIX_IMPLICITLY: u32 = 1;
pub const _POSIX_SOURCE: u32 = 1;
pub const _POSIX_C_SOURCE: u32 = 200809;
pub const __USE_POSIX: u32 = 1;
pub const __USE_POSIX2: u32 = 1;
pub const __USE_POSIX199309: u32 = 1;
pub const __USE_POSIX199506: u32 = 1;
pub const __USE_XOPEN2K: u32 = 1;
pub const __USE_XOPEN2K8: u32 = 1;
pub const _ATFILE_SOURCE: u32 = 1;
pub const __WORDSIZE: u32 = 64;
pub const __WORDSIZE_TIME64_COMPAT32: u32 = 1;
pub const __SYSCALL_WORDSIZE: u32 = 64;
pub const __TIMESIZE: u32 = 64;
pub const __USE_MISC: u32 = 1;
pub const __USE_ATFILE: u32 = 1;
pub const __USE_FORTIFY_LEVEL: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_GETS: u32 = 0;
pub const __GLIBC_USE_DEPRECATED_SCANF: u32 = 0;
pub const _STDC_PREDEF_H: u32 = 1;
pub const __STDC_IEC_559__: u32 = 1;
pub const __STDC_IEC_60559_BFP__: u32 = 201404;
pub const __STDC_IEC_559_COMPLEX__: u32 = 1;
pub const __STDC_IEC_60559_COMPLEX__: u32 = 201404;
pub const __STDC_ISO_10646__: u32 = 201706;
pub const __GNU_LIBRARY__: u32 = 6;
pub const __GLIBC__: u32 = 2;
pub const __GLIBC_MINOR__: u32 = 35;
pub const _SYS_CDEFS_H: u32 = 1;
pub const __glibc_c99_flexarr_available: u32 = 1;
pub const __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI: u32 = 0;
pub const __HAVE_GENERIC_SELECTION: u32 = 1;
pub const __GLIBC_USE_LIB_EXT2: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_BFP_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT: u32 = 0;
pub const __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X: u32 = 0;
pub const __GLIBC_USE_IEC_60559_TYPES_EXT: u32 = 0;
pub const _BITS_TYPES_H: u32 = 1;
pub const _BITS_TYPESIZES_H: u32 = 1;
pub const __OFF_T_MATCHES_OFF64_T: u32 = 1;
pub const __INO_T_MATCHES_INO64_T: u32 = 1;
pub const __RLIM_T_MATCHES_RLIM64_T: u32 = 1;
pub const __STATFS_MATCHES_STATFS64: u32 = 1;
pub const __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64: u32 = 1;
pub const __FD_SETSIZE: u32 = 1024;
pub const _BITS_TIME64_H: u32 = 1;
pub const _BITS_WCHAR_H: u32 = 1;
pub const _BITS_STDINT_INTN_H: u32 = 1;
pub const _BITS_STDINT_UINTN_H: u32 = 1;
pub const INT8_MIN: i32 = -128;
pub const INT16_MIN: i32 = -32768;
pub const INT32_MIN: i32 = -2147483648;
pub const INT8_MAX: u32 = 127;
pub const INT16_MAX: u32 = 32767;
pub const INT32_MAX: u32 = 2147483647;
pub const UINT8_MAX: u32 = 255;
pub const UINT16_MAX: u32 = 65535;
pub const UINT32_MAX: u32 = 4294967295;
pub const INT_LEAST8_MIN: i32 = -128;
pub const INT_LEAST16_MIN: i32 = -32768;
pub const INT_LEAST32_MIN: i32 = -2147483648;
pub const INT_LEAST8_MAX: u32 = 127;
pub const INT_LEAST16_MAX: u32 = 32767;
pub const INT_LEAST32_MAX: u32 = 2147483647;
pub const UINT_LEAST8_MAX: u32 = 255;
pub const UINT_LEAST16_MAX: u32 = 65535;
pub const UINT_LEAST32_MAX: u32 = 4294967295;
pub const INT_FAST8_MIN: i32 = -128;
pub const INT_FAST16_MIN: i64 = -9223372036854775808;
pub const INT_FAST32_MIN: i64 = -9223372036854775808;
pub const INT_FAST8_MAX: u32 = 127;
pub const INT_FAST16_MAX: u64 = 9223372036854775807;
pub const INT_FAST32_MAX: u64 = 9223372036854775807;
pub const UINT_FAST8_MAX: u32 = 255;
pub const UINT_FAST16_MAX: i32 = -1;
pub const UINT_FAST32_MAX: i32 = -1;
pub const INTPTR_MIN: i64 = -9223372036854775808;
pub const INTPTR_MAX: u64 = 9223372036854775807;
pub const UINTPTR_MAX: i32 = -1;
pub const PTRDIFF_MIN: i64 = -9223372036854775808;
pub const PTRDIFF_MAX: u64 = 9223372036854775807;
pub const SIG_ATOMIC_MIN: i32 = -2147483648;
pub const SIG_ATOMIC_MAX: u32 = 2147483647;
pub const SIZE_MAX: i32 = -1;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 4294967295;
pub type size_t = ::std::os::raw::c_ulong;
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[test]
fn bindgen_test_layout_max_align_t() {
    assert_eq!(
        ::std::mem::size_of::<max_align_t>(),
        32usize,
        concat!("Size of: ", stringify!(max_align_t))
    );
    assert_eq!(
        ::std::mem::align_of::<max_align_t>(),
        16usize,
        concat!("Alignment of ", stringify!(max_align_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce1 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce2 as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce2)
        )
    );
}
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __int_least8_t = __int8_t;
pub type __uint_least8_t = __uint8_t;
pub type __int_least16_t = __int16_t;
pub type __uint_least16_t = __uint16_t;
pub type __int_least32_t = __int32_t;
pub type __uint_least32_t = __uint32_t;
pub type __int_least64_t = __int64_t;
pub type __uint_least64_t = __uint64_t;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[test]
fn bindgen_test_layout___fsid_t() {
    assert_eq!(
        ::std::mem::size_of::<__fsid_t>(),
        8usize,
        concat!("Size of: ", stringify!(__fsid_t))
    );
    assert_eq!(
        ::std::mem::align_of::<__fsid_t>(),
        4usize,
        concat!("Alignment of ", stringify!(__fsid_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__fsid_t>())).__val as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__fsid_t),
            "::",
            stringify!(__val)
        )
    );
}
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub const rmw_transport_SHM_TRANSPORT: rmw_transport = 1;
pub const rmw_transport_UPDV4_TRANSPORT: rmw_transport = 2;
pub const rmw_transport_UPDV6_TRANSPORT: rmw_transport = 3;
pub const rmw_transport_TCPV4_TRANSPORT: rmw_transport = 4;
pub const rmw_transport_TCPV6_TRANSPORT: rmw_transport = 5;
pub type rmw_transport = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ParticipantData {
    pub transport: rmw_transport,
    pub participant: *mut ::std::os::raw::c_void,
    pub port: u32,
    pub guid: [::std::os::raw::c_uchar; 12usize],
    pub __bindgen_anon_1: ParticipantData__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ParticipantData__bindgen_ty_1 {
    pub endpoint_v4: [::std::os::raw::c_uchar; 16usize],
    pub endpoint_v6: [::std::os::raw::c_uchar; 39usize],
}
#[test]
fn bindgen_test_layout_ParticipantData__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<ParticipantData__bindgen_ty_1>(),
        39usize,
        concat!("Size of: ", stringify!(ParticipantData__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<ParticipantData__bindgen_ty_1>(),
        1usize,
        concat!("Alignment of ", stringify!(ParticipantData__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ParticipantData__bindgen_ty_1>())).endpoint_v4 as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData__bindgen_ty_1),
            "::",
            stringify!(endpoint_v4)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ParticipantData__bindgen_ty_1>())).endpoint_v6 as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData__bindgen_ty_1),
            "::",
            stringify!(endpoint_v6)
        )
    );
}
#[test]
fn bindgen_test_layout_ParticipantData() {
    assert_eq!(
        ::std::mem::size_of::<ParticipantData>(),
        72usize,
        concat!("Size of: ", stringify!(ParticipantData))
    );
    assert_eq!(
        ::std::mem::align_of::<ParticipantData>(),
        8usize,
        concat!("Alignment of ", stringify!(ParticipantData))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ParticipantData>())).transport as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData),
            "::",
            stringify!(transport)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ParticipantData>())).participant as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData),
            "::",
            stringify!(participant)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ParticipantData>())).port as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData),
            "::",
            stringify!(port)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ParticipantData>())).guid as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ParticipantData),
            "::",
            stringify!(guid)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WriterData {
    pub topic_name: [::std::os::raw::c_char; 255usize],
    pub type_name: [::std::os::raw::c_char; 255usize],
}
#[test]
fn bindgen_test_layout_WriterData() {
    assert_eq!(
        ::std::mem::size_of::<WriterData>(),
        510usize,
        concat!("Size of: ", stringify!(WriterData))
    );
    assert_eq!(
        ::std::mem::align_of::<WriterData>(),
        1usize,
        concat!("Alignment of ", stringify!(WriterData))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WriterData>())).topic_name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WriterData),
            "::",
            stringify!(topic_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WriterData>())).type_name as *const _ as usize },
        255usize,
        concat!(
            "Offset of field: ",
            stringify!(WriterData),
            "::",
            stringify!(type_name)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ReaderData {
    pub topic_name: [::std::os::raw::c_char; 255usize],
    pub type_name: [::std::os::raw::c_char; 255usize],
}
#[test]
fn bindgen_test_layout_ReaderData() {
    assert_eq!(
        ::std::mem::size_of::<ReaderData>(),
        510usize,
        concat!("Size of: ", stringify!(ReaderData))
    );
    assert_eq!(
        ::std::mem::align_of::<ReaderData>(),
        1usize,
        concat!("Alignment of ", stringify!(ReaderData))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ReaderData>())).topic_name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ReaderData),
            "::",
            stringify!(topic_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ReaderData>())).type_name as *const _ as usize },
        255usize,
        concat!(
            "Offset of field: ",
            stringify!(ReaderData),
            "::",
            stringify!(type_name)
        )
    );
}
pub type on_participant_discovery_callback_t = ::std::option::Option<
    unsafe extern "C" fn(participant_data: ParticipantData, user_data: *mut ::std::os::raw::c_void),
>;
pub type on_reader_discovery_callback_t = ::std::option::Option<
    unsafe extern "C" fn(reader_data: ReaderData, user_data: *mut ::std::os::raw::c_void),
>;
pub type on_writer_discovery_callback_t = ::std::option::Option<
    unsafe extern "C" fn(writer_data: WriterData, user_data: *mut ::std::os::raw::c_void),
>;
extern "C" {
    #[doc = " Run discovery server in separate thread."]
    #[doc = " Note: this is non-blocking operation."]
    #[doc = " @param domain_id"]
    #[doc = " @param callback"]
    #[doc = " @return"]
    pub fn run_discovery_server_impl(
        domain_id: u32,
        participant_callback: on_participant_discovery_callback_t,
        reader_callback: on_reader_discovery_callback_t,
        writer_callback: on_writer_discovery_callback_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn stop_discovery_server_impl(domain_id: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn is_discovery_running_impl(domain_id: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn register_on_participant_data(data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn register_on_reader_data(data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn register_on_writer_data(data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn rclcpp_init(argc: ::std::os::raw::c_int, argv: *const *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn rclcpp_shutdown() -> ::std::os::raw::c_int;
}
